# Bembel-Game-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  README.md
Examples/BaseApp/: BaseApp.cpp  BaseApp.h  CMakeLists.txt  main.cpp
Examples/Chess/: CMakeLists.txt  config.xml
Examples/Chess/assets/: assets.xml  chess.mesh.xml
Examples/Chess/shaders/: cook_torrance.glsl  directional_light.frag  directional_light.vert  environment_map_reflection.frag  point_light.vert  read_geom_data.glsl  render_geometry.frag  render_geometry.vert  selection.frag  selection.vert  text.frag  text.vert
Examples/Chess/src/: CameraControle.cpp  CameraControle.h  ChessApplication.cpp  ChessApplication.h  ChessBoard.cpp  ChessBoard.h  SelectionComponent.cpp  SelectionComponent.h  SelectionRenderingStage.cpp  SelectionRenderingStage.h  camera-controle.cpp  camera-controle.h  chess-application.cpp  chess-application.h  main.cpp  selection-component.cpp  selection-component.h  selection-rendering-stage.cpp  selection-rendering-stage.h
Examples/Input/: CMakeLists.txt
Examples/Input/src/: InputExample.cpp  InputExample.h  input-example.cpp  input-example.h  main.cpp
Examples/RenderingTest/: CMakeLists.txt  chessboard.xml  config.xml  planets.xml  scene.xml
Examples/RenderingTest/shaders/: cook_torrance.frag  cook_torrance.glsl  directional_light.frag  point_light.frag  read_geom_data.glsl
Examples/RenderingTest/src/: CameraControle.h  GeometryRenderer.h  LightSource.h  RenderingTest.cpp  RenderingTest.h  SimpleGeometryComponent.cpp  SimpleGeometryComponent.h  SimpleGeometryRenderer.cpp  SimpleGeometryRenderer.h  TestRenderingPipline.cpp  TestRenderingPipline.h  main.cpp
Examples/rendering/: CMakeLists.txt  config.xml
Examples/rendering/src/: camera-controle.cpp  camera-controle.h  create-material-test-scene.h  main.cpp  rendering-example.cpp  rendering-example.h
examples/GUI/: CMakeLists.txt  config.xml  main_gui.json  main_gui.xml
examples/GUI/src/: gui-example.cpp  gui-example.h  gui-example.ixx  main.cpp
examples/gm-helper/: CMakeLists.txt  config.xml
examples/gm-helper/src/: application.cpp  application.ixx  components.ixx  main.cpp  rendering-stages.cpp  rendering-stages.ixx  selection.ixx  textures.ixx  ui.ixx
examples/physics/: CMakeLists.txt  config.xml  gui.xml
examples/physics/src/: camera-controle.cpp  camera-controle.ixx  main.cpp  physics-example.cpp  physics-example.ixx
src/: BembelConfig.h  BembelOpenGL.h  CMakeLists.txt  bembel-config.h  bembel-open-gl.h
src/BembelBase/: Conversion.cpp  Conversion.h  Factory.inl  Image.cpp  XML.cpp  XML.h  _SourceFiles.cmake
src/BembelBase/Events/: EventChannel.inl  EventManager.inl  Signal.hpp  _SourceFiles.cmake
src/BembelBase/Logging/: LogMessage.cpp  LogSink.cpp  _SourceFiles.cmake
src/BembelDataStructures/: ComponentContainer.hpp  Entity.h  EntityManager.cpp  PositionComponent.h  _SourceFiles.cmake
src/BembelDisplay/: DisplayMode.h  DisplaySystem.h  Events.cpp  Window.h  _SourceFiles.cmake
src/BembelEngine/: Application.cpp  Engine.cpp  Engine.h  System.cpp  System.h  _SourceFiles.cmake
src/BembelGraphics/: GraphicSystem.cpp  GraphicSystem.h  TextureView.cpp  TextureView.h  Viewport.cpp  Viewport.h  _SourceFiles.cmake
src/BembelGraphics/Geometry/: GeometryComponent.cpp  GeometryInstance.cpp  GeometryInstance.h  GeometryModel.cpp  GeometryModel.h  GeometryRenderQueue.h  GeometryRenderer.cpp  GeometryRenderer.h  Material.cpp  Material.h
src/BembelGraphics/OpenGL/: BufferObject.cpp  BufferObject.h  Font.cpp  Font.h  FrameBufferObject.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
src/BembelGraphics/RenderingPipeline/: Camera.cpp  Camera.h  DeferredGeometryStage.cpp  DeferredGeometryStage.h  DeferredLightingStage.cpp  DeferredLightingStage.h  EnvironmentMapReflectionStage.h  GeometryRenderingStage.cpp  GeometryRenderingStage.h  LightSourceProperties.cpp  LightSourceProperties.h  Renderer.h  RenderingPipeline.cpp  RenderingPipeline.h  RenderingStage.h
src/BembelKernel/: Application.cpp  Application.h  Kernel.cpp  Kernel.h  System.cpp  System.h  _SourceFiles.cmake
src/BembelKernel/Assets/: AssetContainer.h  AssetContainer.inl  AssetDescription.cpp  AssetDescription.h  AssetHandle.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetManager.inl  SerialAssetLoader.hpp  SerialAssetLoader.inl
src/BembelKernel/Display/: DisplayManager.cpp  DisplayManager.h  DisplayMode.cpp  DisplaySystem.cpp  DisplaySystem.h  EventCallbacks.cpp  EventCallbacks.h  Window.cpp  Window.h
src/BembelKernel/Engine/: Engine.cpp  Engine.h  System.h
src/BembelKernel/Events/: DisplayEvents.h  EventCallbacks.cpp  EventChannel.hpp  EventManager.cpp  Events.h  InputEvents.cpp  InputEvents.h
src/BembelKernel/Input/: Button.cpp  Button.h  Delegate.hpp  Delegate.inl  Signal.hpp  Signal.inl  Slot.hpp
src/BembelKernel/Renderig/: FrameBufferObject.h  GeometryMesh.cpp  Material.h  Shader.h  Texture.cpp  Texture.h
src/BembelKernel/Rendering/: GeometryMesh.h  GeometryRenderer.cpp  GeometryRenderer.h  Material.cpp  Shader.cpp  Shader.h
src/Bembelnteraction/: InteractionSystem.cpp  InteractionSystem.h  Signal.hpp  Slot.hpp  Slot.inl  _SourceFiles.cmake
src/bembel/: CMakeLists.txt  bembel.hpp  bembel.ixx  library.hpp  pch.h  pch.hpp
src/bembel-base/: concurrent-queue.hpp  concurrent-queue.inl  conversion.cpp  conversion.h  factory.hpp  factory.inl  image.cpp  image.h  source-files.cmake  xml.cpp  xml.h
src/bembel-graphics/: graphic-system.cpp  graphic-system.h  source-files.cmake  texture-view.cpp  texture-view.h  viewport.cpp  viewport.h
src/bembel-interaction/: interaction-system.cpp  interaction-system.h  signal.hpp  signal.inl  slot.hpp  slot.inl  source-files.cmake
src/bembel-kernel/: application.cpp  application.h  kernel.cpp  kernel.h  source-files.cmake  system.cpp  system.h
tools/: imgui.ini
tools/editor/: CMakeLists.txt  config.xml
tools/font-converter/: CMakeLists.txt  config.xml  gui.xml  local.de  local.en
(+721 files in other folders)
